# news_mcp

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  tool_definitions.json
src/: main.py  tools.py
